fix: adjust padding for desktop hero area for better spacing

--- a/sass/components/_hero-area.scss
+++ b/sass/components/_hero-area.scss
@@ -20,6 +20,7 @@
 
   @include for-desktop-up {
     background-image: url("../images/desktop/image-hero.jpg");
+    padding: $spacing-600 $spacing-1000;
   }
 
   &__content {
